# src/main/resources/static/swagger.yaml
@@ -41,24 +41,33 @@ paths:
         '409':
           description: CONFLICT as username is already taken
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-              example: 'The username has already been taken: Username'
+                $ref: '#/components/schemas/ApiError'
+              example:
+                status: CONFLICT
+                message: 'The username has already been taken: Username'
+                timestamp: '2023-11-14 12:28:42'
 
         '400':
           description: BAD REQUEST
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ValidationErrorResponse'
+                $ref: '#/components/schemas/ApiError'
               example:
-                ValidationErrorResponseExample:
-                  violations:
-                    - identifier: 'password'
-                      errorMessage: 'The given password has an invalid format. It must contain a letter and a digit.'
-                    - identifier: 'repeatedPassword'
-                      errorMessage: 'The given password has an invalid format. It must contain a letter and a digit.'
+                status: BAD_REQUEST
+                message: 'Validation failed'
+                timestamp: '2023-11-14 12:28:42'
+                subErrors:
+                  - type: validationError
+                    field: password
+                    rejectedValue: 12345678
+                    message: "The given password has an invalid format. It must contain a letter and a digit."
+                  - type: validationError
+                    field: repeatedPassword
+                    rejectedValue: 12345678
+                    message: "The given password has an invalid format. It must contain a letter and a digit."
 
   /times:
     post:
@@ -91,31 +100,65 @@ paths:
         '409':
           description: CONFLICT the given user does not exist
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-              example: 'User with the userId 4c8eac33-15ed-4ddd-b8cd-8f836d641ec5 does not exist.'
+                $ref: '#/components/schemas/ApiError'
+              example:
+                status: CONFLICT
+                message: 'User with the userId 4c8eac33-15ed-4ddd-b8cd-8f836d641ec5 does not exist.'
+                timestamp: '2023-11-14 12:28:42'
         '400':
           description: BAD REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+              example:
+                status: BAD_REQUEST
+                message: 'Validation failed'
+                timestamp: '2023-11-14 12:28:42'
+                subErrors:
+                  - type: validationError
+                    field: repeatedPassword
+                    rejectedValue: abc1234567
+                    message: 'The given passwords have to match.'
 
 components:
   schemas:
-    ValidationErrorResponse:
+    ApiError:
       type: object
       properties:
-        violations:
+        status:
+          type: string
+        message:
+          type: string
+        timestamp:
+          type: string
+          description: timestamp in the format 'yyyy-MM-dd HH:mm:ss'
+        subErrors:
           type: array
           items:
-            $ref: '#/components/schemas/ValidationError'
-    ValidationError:
+            $ref: '#/components/schemas/ApiSubError'
+
+    ApiSubError:
+      oneOf:
+        - $ref: '#/components/schemas/ApiValidationError'
+      discriminator:
+        propertyName: type
+        mapping:
+          validationError: '#/components/schemas/ApiValidationError'
+
+    ApiValidationError:
       type: object
       properties:
-        identifier:
+        field:
           type: string
-          description: Identifier of the field which contained an error
-        errorMessage:
+        rejectedValue:
+          type: object
+          description: The value for which the validation failed
+        message:
           type: string
-          description: Error message detailing what went wrong in the field referenced by 'identifier'
+
     UserDto:
       type: object
       properties:
@@ -123,6 +166,7 @@ components:
           type: string
         username:
           type: string
+
     UserRequest:
       type: object
       properties:
@@ -153,6 +197,7 @@ components:
         time:
           type: string
           description: The driven time. It has to be given in the format M:SS.msmsms
+
     TimeDto:
       type: object
       properties:
